--- a/thousands/templates/summit_edit.html
+++ b/thousands/templates/summit_edit.html
@@ -15,6 +15,7 @@
 {% endif %}
 <form id="summit_edit_form" method="post" class="form-horizontal">
   {{ form.id }}
+  {{ form.csrf_token }}
   <div class="form-group">
     <label for="name" class="col-md-3 control-label">Название</label>
     <div class="col-md-6">
